--- a/index.html
+++ b/index.html
@@ -5,6 +5,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Online SHS - Grade 11 STEM</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    .subjects-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
+      margin-top: 30px;
+    }
+    .subject-card {
+      background: var(--surface);
+      border-radius: 12px;
+      padding: 25px;
+      text-align: center;
+      box-shadow: var(--shadow);
+      transition: transform 0.2s, box-shadow 0.2s;
+      text-decoration: none;
+      color: var(--text);
+    }
+    .subject-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+    }
+    .subject-card h3 {
+      margin-bottom: 10px;
+      color: var(--accent);
+    }
+    .subject-card p {
+      color: var(--text-light);
+      font-size: 0.95rem;
+    }
+  </style>
 </head>
 <body>
   <!-- Sidebar -->
@@ -74,7 +104,7 @@
         </p>
       </div>
 
-      <!-- Secret Reset Panel (for prototype testing) -->
+      <!-- Secret Reset Panel -->
       <div class="card" style="margin-top:40px; border:1px solid #e74c3c;">
         <h3 style="color:#e74c3c;">Developer Tools (Prototype Only)</h3>
         <p style="color:var(--text-light); font-size:0.9rem;">
@@ -82,11 +112,11 @@
         </p>
         <input type="password" id="resetCode" placeholder="Enter code" style="padding:10px; width:200px; border-radius:8px; border:1px solid var(--border); margin-right:10px;">
         <button id="resetBtn" style="padding:10px 20px; background:#e74c3c; color:white; border:none; border-radius:8px; cursor:pointer;">Reset Progress</button>
-        <p id="resetMessage" style="margin-top:10px; font-size:0.9rem; color:#27ae60;"></p>
+        <p id="resetMessage" style="margin-top:10px; font-size:0.9rem;"></p>
       </div>
     </div>
 
-    <!-- Lessons Tab -->
+    <!-- Lessons Tab - Restored -->
     <div id="lessons" class="tab-content">
       <div class="card">
         <h2>Select a Subject</h2>
@@ -105,7 +135,40 @@
             <p>Coming soon...</p>
           </a>
 
-          <!-- Add more subjects later -->
+          <a href="#" class="subject-card" style="opacity:0.6;">
+            <h3>Pre-Calculus</h3>
+            <p>Coming soon...</p>
+          </a>
+
+          <a href="#" class="subject-card" style="opacity:0.6;">
+            <h3>Basic Calculus</h3>
+            <p>Coming soon...</p>
+          </a>
+
+          <a href="#" class="subject-card" style="opacity:0.6;">
+            <h3>General Physics 1</h3>
+            <p>Coming soon...</p>
+          </a>
+
+          <a href="#" class="subject-card" style="opacity:0.6;">
+            <h3>General Chemistry 1</h3>
+            <p>Coming soon...</p>
+          </a>
+
+          <a href="#" class="subject-card" style="opacity:0.6;">
+            <h3>Earth and Life Science</h3>
+            <p>Coming soon...</p>
+          </a>
+
+          <a href="#" class="subject-card" style="opacity:0.6;">
+            <h3>Physical Science</h3>
+            <p>Coming soon...</p>
+          </a>
+
+          <a href="#" class="subject-card" style="opacity:0.6;">
+            <h3>Filipino sa Piling Larangan (Akademik)</h3>
+            <p>Coming soon... (in Filipino)</p>
+          </a>
         </div>
       </div>
     </div>
@@ -160,17 +223,14 @@
       });
     });
 
-    // Secret Reset Feature (for prototype testing)
+    // Secret Reset Feature
     document.getElementById('resetBtn').addEventListener('click', () => {
       const code = document.getElementById('resetCode').value;
       if (code === '112499') {
         // Wipe all data
-        localStorage.removeItem('completedLessons');
-        localStorage.removeItem('onlineSHS_data');
-        localStorage.removeItem('onlineSHS_quizzes');
-        localStorage.removeItem('onlineSHS_memos');
+        localStorage.clear(); // Clears everything: lessons, time, memos, quizzes
 
-        // Reset study time display
+        // Reset timer display
         document.getElementById('studyTimeDisplay').textContent = '00:00:00';
 
         // Clear memos
@@ -179,7 +239,7 @@
         document.getElementById('resetMessage').textContent = 'All progress reset successfully!';
         document.getElementById('resetMessage').style.color = '#27ae60';
 
-        setTimeout(() => location.reload(), 2000); // Reload to reflect changes
+        setTimeout(() => location.reload(), 2000);
       } else {
         document.getElementById('resetMessage').textContent = 'Incorrect code';
         document.getElementById('resetMessage').style.color = '#e74c3c';
