--- a/index.html
+++ b/index.html
@@ -34,6 +34,48 @@
       color: var(--text-light);
       font-size: 0.95rem;
     }
+    /* Circular Progress Meter Style */
+    .progress-circle {
+      position: relative;
+      width: 180px;
+      height: 180px;
+      margin: 30px auto;
+    }
+    .progress-circle svg {
+      width: 100%;
+      height: 100%;
+      transform: rotate(-90deg);
+    }
+    .progress-circle circle {
+      fill: none;
+      stroke-width: 12;
+      stroke-linecap: round;
+    }
+    .progress-circle .bg {
+      stroke: #dfe6e9;
+    }
+    .progress-circle .fill {
+      stroke: var(--accent);
+      stroke-dasharray: 0 502;
+      transition: stroke-dasharray 1s ease;
+    }
+    .progress-circle .percent {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 2rem;
+      font-weight: 600;
+      color: var(--accent);
+    }
+    .progress-circle .label {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 1.1rem;
+      color: var(--text);
+    }
   </style>
 </head>
 <body>
@@ -97,32 +139,43 @@
         <button id="saveMemosBtn" style="margin-top:12px; padding:10px 20px; background:var(--accent); color:white; border:none; border-radius:8px; cursor:pointer;">Save Memos</button>
       </div>
 
+      <!-- Subject Progress Meters -->
       <div class="card">
-  <h3>Unit 1 Progress: Functions and Their Graphs</h3>
-  <div style="background:#dfe6e9; border-radius:8px; height:30px; margin:20px 0; overflow:hidden;">
-    <div id="unit1ProgressBar" style="background:var(--accent); height:100%; width:0%; transition:width 0.5s;"></div>
-  </div>
-  <p style="text-align:center;" id="unit1ProgressText">0% Complete (0/5 lessons)</p>
-</div>
+        <h3>Subject Progress</h3>
+        <p style="color:var(--text-light); text-align:center; margin-bottom:30px;">
+          Your completion across subjects
+        </p>
 
-<script>
-  // Update Unit 1 progress bar on My Page
-  function updateUnit1Progress() {
-    const progress = JSON.parse(localStorage.getItem('unit1Progress') || '{"completed":0,"total":5}');
-    const percent = Math.round((progress.completed / progress.total) * 100);
-    const bar = document.getElementById('unit1ProgressBar');
-    const text = document.getElementById('unit1ProgressText');
-    if (bar && text) {
-      bar.style.width = percent + '%';
-      text.textContent = percent + '% Complete (' + progress.completed + '/5 lessons)';
-    }
-  }
+        <div style="display:grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap:30px;">
+          <!-- General Mathematics -->
+          <div>
+            <div class="progress-circle">
+              <svg>
+                <circle class="bg" cx="90" cy="90" r="80"></circle>
+                <circle class="fill" cx="90" cy="90" r="80" id="gmFill"></circle>
+              </svg>
+              <div class="percent" id="gmPercent">0%</div>
+              <div class="label">General Mathematics</div>
+            </div>
+            <p style="text-align:center; margin-top:10px;" id="gmText">0 / 5 lessons</p>
+          </div>
 
-  // Run on load and when tab is shown
-  if (document.getElementById('my-page')) {
-    updateUnit1Progress();
-  }
-</script>
+          <!-- Future subjects (0% by default) -->
+          <div>
+            <div class="progress-circle">
+              <svg>
+                <circle class="bg" cx="90" cy="90" r="80"></circle>
+                <circle class="fill" cx="90" cy="90" r="80"></circle>
+              </svg>
+              <div class="percent">0%</div>
+              <div class="label">Statistics & Probability</div>
+            </div>
+            <p style="text-align:center; margin-top:10px;">Coming soon</p>
+          </div>
+
+          <!-- Add more subject meters here later -->
+        </div>
+      </div>
 
       <!-- Secret Reset Panel -->
       <div class="card" style="margin-top:40px; border:1px solid #e74c3c;">
@@ -155,40 +208,7 @@
             <p>Coming soon...</p>
           </a>
 
-          <a href="#" class="subject-card" style="opacity:0.6;">
-            <h3>Pre-Calculus</h3>
-            <p>Coming soon...</p>
-          </a>
-
-          <a href="#" class="subject-card" style="opacity:0.6;">
-            <h3>Basic Calculus</h3>
-            <p>Coming soon...</p>
-          </a>
-
-          <a href="#" class="subject-card" style="opacity:0.6;">
-            <h3>General Physics 1</h3>
-            <p>Coming soon...</p>
-          </a>
-
-          <a href="#" class="subject-card" style="opacity:0.6;">
-            <h3>General Chemistry 1</h3>
-            <p>Coming soon...</p>
-          </a>
-
-          <a href="#" class="subject-card" style="opacity:0.6;">
-            <h3>Earth and Life Science</h3>
-            <p>Coming soon...</p>
-          </a>
-
-          <a href="#" class="subject-card" style="opacity:0.6;">
-            <h3>Physical Science</h3>
-            <p>Coming soon...</p>
-          </a>
-
-          <a href="#" class="subject-card" style="opacity:0.6;">
-            <h3>Filipino sa Piling Larangan (Akademik)</h3>
-            <p>Coming soon... (in Filipino)</p>
-          </a>
+          <!-- Other subjects -->
         </div>
       </div>
     </div>
@@ -209,7 +229,7 @@
 
   <script src="script.js"></script>
   <script>
-    // Sidebar and tab navigation
+    // Sidebar and tab navigation (same as before)
     const menuBtn = document.getElementById('menuBtn');
     const sidebar = document.getElementById('sidebar');
     const overlay = document.getElementById('overlay');
@@ -243,18 +263,37 @@
       });
     });
 
-    // Secret Reset Feature - Fixed to fully reset timer
+    // Update General Mathematics progress meter
+    function updateGMProgress() {
+      const progress = JSON.parse(localStorage.getItem('unit1Progress') || '{"completed":0,"total":5}');
+      const percent = Math.round((progress.completed / progress.total) * 100);
+      const circumference = 502; // 2 * π * 80
+      const dasharray = (percent / 100) * circumference;
+
+      const fill = document.getElementById('gmFill');
+      const percentText = document.getElementById('gmPercent');
+      const text = document.getElementById('gmText');
+
+      if (fill && percentText && text) {
+        fill.style.strokeDasharray = dasharray + ' ' + circumference;
+        percentText.textContent = percent + '%';
+        text.textContent = progress.completed + ' / 5 lessons';
+      }
+    }
+
+    // Run on load
+    updateGMProgress();
+
+    // Secret Reset
     document.getElementById('resetBtn').addEventListener('click', () => {
       const code = document.getElementById('resetCode').value;
       if (code === '112499') {
-        // Clear all localStorage data
         localStorage.clear();
-
-        document.getElementById('resetMessage').textContent = 'All progress reset successfully! Reloading...';
+        document.getElementById('studyTimeDisplay').textContent = '00:00:00';
+        document.getElementById('memosTextarea').value = '';
+        document.getElementById('resetMessage').textContent = 'All progress reset! Reloading...';
         document.getElementById('resetMessage').style.color = '#27ae60';
-
-        // Force reload to apply fresh data from script.js
-        location.reload();
+        setTimeout(() => location.reload(), 1500);
       } else {
         document.getElementById('resetMessage').textContent = 'Incorrect code';
         document.getElementById('resetMessage').style.color = '#e74c3c';
