--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       color: var(--text-light);
       font-size: 0.95rem;
     }
-    /* Circular Progress Meter - Perfectly fitted text inside */
+    /* Circular Progress Meter - Clean single ring, perfect text fit */
     .progress-circle {
       position: relative;
       width: 220px;
@@ -179,8 +179,6 @@
               <div class="lessons-count">Coming soon</div>
             </div>
           </div>
-
-          <!-- Add more subject meters here later -->
         </div>
       </div>
 
