--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       color: var(--text-light);
       font-size: 0.95rem;
     }
-    /* Circular Progress Meter - Clean single ring, perfect text fit */
+    /* Circular Progress Meter - Single clean ring, perfect text fit */
     .progress-circle {
       position: relative;
       width: 220px;
@@ -65,10 +65,10 @@
       left: 50%;
       transform: translate(-50%, -50%);
       text-align: center;
-      width: 80%;
+      width: 85%;
     }
     .progress-circle .percent {
-      font-size: 3rem;
+      font-size: 3.2rem;
       font-weight: 700;
       color: var(--accent);
       line-height: 1;
@@ -213,7 +213,40 @@
             <p>Coming soon...</p>
           </a>
 
-          <!-- Other subjects -->
+          <a href="#" class="subject-card" style="opacity:0.6;">
+            <h3>Pre-Calculus</h3>
+            <p>Coming soon...</p>
+          </a>
+
+          <a href="#" class="subject-card" style="opacity:0.6;">
+            <h3>Basic Calculus</h3>
+            <p>Coming soon...</p>
+          </a>
+
+          <a href="#" class="subject-card" style="opacity:0.6;">
+            <h3>General Physics 1</h3>
+            <p>Coming soon...</p>
+          </a>
+
+          <a href="#" class="subject-card" style="opacity:0.6;">
+            <h3>General Chemistry 1</h3>
+            <p>Coming soon...</p>
+          </a>
+
+          <a href="#" class="subject-card" style="opacity:0.6;">
+            <h3>Earth and Life Science</h3>
+            <p>Coming soon...</p>
+          </a>
+
+          <a href="#" class="subject-card" style="opacity:0.6;">
+            <h3>Physical Science</h3>
+            <p>Coming soon...</p>
+          </a>
+
+          <a href="#" class="subject-card" style="opacity:0.6;">
+            <h3>Filipino sa Piling Larangan (Akademik)</h3>
+            <p>Coming soon... (in Filipino)</p>
+          </a>
         </div>
       </div>
     </div>
